SSG packaging separation fixes.
- software rpm now gets /ssg/lib/ext in it
- reverted gateway.sh to use -Djava.ext dirs again (now that the JCE startup problem was found to be a permissions problem)
- appliance rpm no longer removes ssgconfig and gateway users
- minor environment variable fixes in various scripts

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@17652 219f1c6e-4a0e-43c8-96f2-6e749be13fd4